--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "bcrypt": "^5.0.1",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -21,6 +22,8 @@
     "mongoose": "^6.0.14",
     "morgan": "1.10.0",
     "multer": "^1.4.4",
+    "nanoid": "^3.1.30",
+    "nodemailer": "^6.7.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
